[project]
name = "cpsip-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-tools>=0.1.34",
    "pandas>=3.0.2",
    "pinecone>=8.1.2",
    "pytest>=9.0.3",
    "streamlit>=1.56.0",
]
